<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.singlescreenapp.MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Black"
        android:fontFamily="casual"
        android:gravity="center"
        android:paddingTop="8dp"
        android:text="Fake Records Store"
        android:textColor="@color/Red"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        style="@style/text"
        android:gravity="center"
        android:text="@string/contact_information" />

    <TextView
        style="@style/text"
        android:text="@string/phone" />

    <TextView
        style="@style/text"
        android:text="@string/email" />

    <TextView
        style="@style/text"
        android:text="@string/hours" />

    <TextView
        style="@style/text"
        android:text="@string/Address" />

    <TextView
        style="@style/text"
        android:text="@string/what_we_do" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/disk" />

</LinearLayout>

</ScrollView>